# Cpp-interview

./: CMakeLists.txt  Instance.cpp  Instance.h  README.md  World.cpp  World.h  install.sh  main.cpp
buildings/: Base.cpp  Base.h  Building.cpp  Building.h  GoldMine.cpp  GoldMine.h  Obstacle.cpp  Obstacle.h
characters/: Archer.cpp  Archer.h  Catapult.cpp  Catapult.h  Character.cpp  Character.h  Knight.cpp  Knight.h  Pikeman.cpp  Pikeman.h  Ram.cpp  Ram.h  SwordsMan.cpp  SwordsMan.h  Swordsman.cpp  Swordsman.h  Worker.cpp  Worker.h
settings/: map.txt
unitTests/: worldTests.cpp
utils/: HeadersConnector.h  SettingsReader.cpp  SettingsReader.h
